--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -81,7 +81,7 @@ jobs:
   - task: apply-and-destroy
     file: ci/scripts/terraforming/gcp/task.yml
     params:
-      GCP_PROJECT_ID: {{gcp_project_id}}
-      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      GCP_PROJECT_ID: {{cf_infra_gcp_project_id}}
+      GCP_SERVICE_ACCOUNT_KEY: {{cf_infra_gcp_service_account_key}}
       GCP_SSL_CERT: {{ssl_cert}}
       GCP_SSL_PRIVATE_KEY: {{ssl_private_key}}
