Update Git resource for bosh-bootloader
- see https://github.com/concourse/git-resource/issues/183
- this is fixed in the latest version of the git-resource Docker image
but hasn't been deployed to Wings yet

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/bosh-deployment.yml
+++ b/pipelines/bosh-deployment.yml
@@ -8,6 +8,13 @@ groups:
   - github-release
   - merge-bump-deployments-change
 
+resource_types:
+- name: latest-git-resource
+  type: docker-image
+  source:
+    repository: concourse/git-resource
+    tag: latest
+
 resources:
 - name: bosh-deployment
   type: git
@@ -22,7 +29,7 @@ resources:
     uri: https://github.com/cppforlife/jumpbox-deployment.git
 
 - name: bosh-bootloader
-  type: git
+  type: latest-git-resource
   source:
     branch: master
     uri: git@github.com:cloudfoundry/bosh-bootloader.git
