releasable gates on bbl-azure-concourse passing
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -2001,6 +2001,7 @@ jobs:
       passed:
       - bbl-aws-cf
       - bbl-gcp-cf
+      - bbl-azure-concourse
       - bbl-aws-concourse
       - bbl-gcp-concourse
       - bbl-lite-gcp
