use of ARG in Dockerfile doesn't leak creds
Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/dockerfiles.yml
+++ b/pipelines/dockerfiles.yml
@@ -179,7 +179,7 @@ jobs:
         cache: false
 
 - name: deployment-docker-image
-  public: false
+  public: true
   plan:
   - do:
     - aggregate:
