copy bbl-states into a new directory so concourse can push it
Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -2026,7 +2026,7 @@ jobs:
     ensure:
       put: infrastructure-ci-bbl-states
       params:
-        repository: infrastructure-ci-bbl-states
+        repository: updated-bbl-states
 
 - name: github-release
   plan:
